# course-upgrader

./: .env.example  .gitignore  LICENSE  README.md  SHARING_GUIDE.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
scripts/: install.sh  server.py
skills/course-upgrader/: SKILL.md
src/course_upgrader/: __init__.py  analyzer.py  cli.py  config.py  course_searcher.py  models.py  resume_parser.py  server.py  utils.py
src/course_upgrader/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py
src/course_upgrader/search/: __init__.py  base.py  duckduckgo_provider.py  factory.py  tavily_provider.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_course_searcher.py  test_resume_parser.py  test_server.py
tests/fixtures/: sample_resume.txt
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: CourseCard.tsx  CourseTabs.tsx  DetailModal.tsx  RedundancyMeter.tsx  ResumeSummary.tsx  UploadZone.tsx
