[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "course-upgrader"
version = "0.1.0"
description = "AI agent that compares your resume against real course listings to find courses that teach genuinely new skills instead of redundant ones."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Course Upgrader Contributors" }]
dependencies = [
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",
    "duckduckgo_search>=6.0.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "ruff>=0.5.0", "httpx>=0.27.0"]

[project.scripts]
course-upgrader = "course_upgrader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
